# InteratciveStorefront_rust

./: Cargo.toml  Notes.md
assets/config/: settings.json
assets/models/: plant_collider.glb  tasse.glb  tasse_collider.glb  test.glb  test_collider.glb
docs/: Projekt_Struktur_und_Ablauf.md  rendering_kamera_leitfaden.md
src/: gamelogic.rs  gamestates.rs  main.rs  network.rs  setup.rs
src/gamelogic/: event_processor.rs
src/network/: events.rs  osc.rs  ws.rs
src/setup/: appstate.rs  assetloader.rs  camera.rs  diagnostics.rs  gltf_spawner.rs  lighting.rs  loading.rs  mod.rs  orbiting_camera.rs  particles.rs  primitive_spawner.rs  stresstest.rs  world.rs
