[package]
name = "InteractiveStorefront"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.2", features = ["png", "jpeg", "ktx2", "dds", "hdr", "bevy_render"] }
avian3d = { version = "0.4", features = ["collider-from-mesh"] }
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
rand = "0.9"  # Für Zufallszahlen im Stresstest

# macOS Metal Optimierungen
[profile.dev]
opt-level = 1  # Leichte Optimierung auch im Debug-Modus für bessere Frame-Times

[profile.release]
lto = "thin"  # Link-Time Optimization für bessere Performance
codegen-units = 1  # Bessere Optimierung, langsamere Compile-Zeit
