[package]
name = "InteractiveStorefront"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.2", features = [
    "png",
    "jpeg",
    "ktx2",
    "dds",
    "hdr",
    "bevy_pbr",
    "mp3"
    ]}
avian3d = { version = "0.4", features = ["collider-from-mesh"] }
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "*"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
rosc = "~0.10"
crossbeam-channel = "0.5.15"
futures-util = "0.3.31"
bincode = "2.0.1"

# macOS Metal Optimierungen
[profile.dev]
opt-level = 1  # Leichte Optimierung auch im Debug-Modus für bessere Frame-Times

[profile.release]
lto = "thin"  # Link-Time Optimization für bessere Performance
codegen-units = 1  # Bessere Optimierung, langsamere Compile-Zeit
